finish porting, resource pack still broken